@@ -1,3 +1,9 @@
+2003-10-13  Rodrigo Moya <rodrigo@ximian.com>
+
+	* gui/dialogs/new-calendar.c (new_calendar_dialog): set a default group
+	on the calendar group option menu and create the source if all checks
+	are passed.
+
 2003-10-12  Rodrigo Moya <rodrigo@ximian.com>
 
 	* gui/dialogs/new-calendar.c (new_calendar_dialog): set up widgets
